fix: add extra spacing for scrollbar issue list

--- a/ext/frontend/src/styles/components/ng-select.scss
+++ b/ext/frontend/src/styles/components/ng-select.scss
@@ -60,4 +60,21 @@
     }
   }
 
+  .ng-dropdown-panel-items {
+    &::-webkit-scrollbar {
+      width: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: #e4e4e4;
+      border-radius: 100px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--primary);
+      border-radius: 100px
+    }
+  }
+
 }
+
